--- a/HTML/7.video/5.embed.html
+++ b/HTML/7.video/5.embed.html
@@ -14,6 +14,7 @@
             height  嵌入物件的高度，單位是px
             HTML<embed>元素將外部內容嵌入文檔中的指定位置。此內容由外部應用程序或其他交互式內容源（如瀏覽器插件）提供。
             比如Flash，但現在大多的網站已經沒再使用這個屬性了，所以好像被淘汰了?
+            google地圖和Youtube複製連結都是給這個給你
         -->
         <embed src = "PDFTest.pdf" height = "500">
     </body>
