--- a/CSS/1.basicCSS/1.importCSS/externalStyleSheet.html
+++ b/CSS/1.basicCSS/1.importCSS/externalStyleSheet.html
@@ -12,7 +12,7 @@
     <body>
         <h1>HTML5 + CSS3</h1>
         <h1 class = "font1">HTML5 + CSS3</h1>
-        <p class = "font1">1234564568978</p>
+        <p class = "all">1234564568978</p>
         <p id = "a1">Testttttt</p>
     </body>
 </html>
