--- a/HTML/補充.html
+++ b/HTML/補充.html
@@ -64,3 +64,8 @@
 
 <sub>...</sub>                  <!--元素是下標元素，最常用在化學符號，ex.水的化學符號是H2O-->
 
+<article>...</article>          <!--元素表示文檔，頁面，應用或網站中的獨立結構，其意在成為可獨立分配的或可替代的結構，
+                                    如在發布中，它可能是論壇帖子，雜誌或新聞文章，博客，用戶提交的評論，相互作用組件，或者其他獨立的內容項目-->
+
+<aside>...</aside>              <!--元素表示一個和其餘頁面內容幾乎無關的部分，被認為是獨立於該內容的一部分並且可以被單獨的拆分出來而不會使整體受影響。
+                                    其通常表現為側邊欄或者標註框（call-out boxes）。-->
