--- a/HTML/補充.html
+++ b/HTML/補充.html
@@ -69,3 +69,9 @@
 
 <aside>...</aside>              <!--元素表示一個和其餘頁面內容幾乎無關的部分，被認為是獨立於該內容的一部分並且可以被單獨的拆分出來而不會使整體受影響。
                                     其通常表現為側邊欄或者標註框（call-out boxes）。-->
+
+<button type = "button">...</button>            <!--這個元素可以建立一個通用按鈕
+                                                    type:
+                                                        submit:這是預設
+                                                        reset:重設按鈕
+                                                        button:通用按鈕-->
