--- a/JavaScript/1.baseJavaScript/guessNumber.html
+++ b/JavaScript/1.baseJavaScript/guessNumber.html
@@ -7,17 +7,13 @@
             
             body {
                 margin: 0px;
+                background-color: black;
             }
             
-            div.ex {
-                width: 600px;
-                height: 600px;
-                background-color: black;
-                padding-top: 300px;
-                padding-left: 300px;
-            }
 
             div div {
+                margin: auto;
+                margin-top: 250px;
                 text-align: center;
                 width: 300px;
                 height: 200px;
@@ -27,7 +23,7 @@
         </style>
     </head>
     <body>
-        <div class = "ex">
+        <div>
             <div>
                 <h1>猜數字!!</h1>
                 <p>請輸入您要猜的數字<input type = "text" id = "ex"></p>
