--- a/Exercise/myWeb/myServer/public/item6.html
+++ b/Exercise/myWeb/myServer/public/item6.html
@@ -84,30 +84,31 @@
         var audioSelect = document.querySelector('select#audioSource');
         var videoSelect = document.querySelector('select#videoSource');
 
+        // getStram
         audioSelect.onchange = getStream;
         videoSelect.onchange = getStream;
 
         getStream().then(getDevices).then(gotDevices);
 
         function getDevices() {
-        // AFAICT in Safari this only gets default devices until gUM is called :/
-        return navigator.mediaDevices.enumerateDevices();
+          // AFAICT in Safari this only gets default devices until gUM is called :/
+          return navigator.mediaDevices.enumerateDevices();
         }
 
         function gotDevices(deviceInfos) {
-        window.deviceInfos = deviceInfos; // make available to console
-        console.log('Available input and output devices:', deviceInfos);
-        for (const deviceInfo of deviceInfos) {
-            const option = document.createElement('option');
-            option.value = deviceInfo.deviceId;
-            if (deviceInfo.kind === 'audioinput') {
-            option.text = deviceInfo.label || `Microphone ${audioSelect.length + 1}`;
-            audioSelect.appendChild(option);
-            } else if (deviceInfo.kind === 'videoinput') {
-            option.text = deviceInfo.label || `Camera ${videoSelect.length + 1}`;
-            videoSelect.appendChild(option);
-            }
-        }
+          window.deviceInfos = deviceInfos; // make available to console
+          console.log('Available input and output devices:', deviceInfos);
+          for (const deviceInfo of deviceInfos) {
+              const option = document.createElement('option');
+              option.value = deviceInfo.deviceId;
+              if (deviceInfo.kind === 'audioinput') {
+              option.text = deviceInfo.label || `Microphone ${audioSelect.length + 1}`;
+              audioSelect.appendChild(option);
+              } else if (deviceInfo.kind === 'videoinput') {
+              option.text = deviceInfo.label || `Camera ${videoSelect.length + 1}`;
+              videoSelect.appendChild(option);
+              }
+          }
         }
 
         function getStream() {
@@ -127,12 +128,12 @@
         }
 
         function gotStream(stream) {
-        window.stream = stream; // make stream available to console
-        audioSelect.selectedIndex = [...audioSelect.options].
-            findIndex(option => option.text === stream.getAudioTracks()[0].label);
-        videoSelect.selectedIndex = [...videoSelect.options].
-            findIndex(option => option.text === stream.getVideoTracks()[0].label);
-        videoElement.srcObject = stream;
+          window.stream = stream; // make stream available to console
+          audioSelect.selectedIndex = [...audioSelect.options].
+              findIndex(option => option.text === stream.getAudioTracks()[0].label);
+          videoSelect.selectedIndex = [...videoSelect.options].
+              findIndex(option => option.text === stream.getVideoTracks()[0].label);
+          videoElement.srcObject = stream;
         }
 
         function handleError(error) {
